Modular card component

--- a/src/components/_preview.hbs
+++ b/src/components/_preview.hbs
@@ -2,7 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="{{ path '/css/style.css' }}">
+    <link rel="stylesheet" type="text/css" href="{{ path '/css/card/base/base.css' }}">
+    <link rel="stylesheet" type="text/css" href="{{ path '/css/card/container/container.css' }}">
     <title>Preview Layout</title>
 </head>
 <body>
