--- a/src/components/card/base/base.hbs
+++ b/src/components/card/base/base.hbs
@@ -11,7 +11,9 @@
       {{/if}}
     </div>
     {{#if text}}
-      <p>{{text}}</p>
+      <div class="text">
+        <p>{{text}}</p>
+      </div>
     {{/if}}
   </div>
 </div>
