--- a/src/components/card/base/base.scss
+++ b/src/components/card/base/base.scss
@@ -1,4 +1,4 @@
-$break--mobile: 1000px;
+$break--mobile: 1040px;
 
 * {
   transition: all 1s ease;
@@ -18,8 +18,9 @@ div.card {
   vertical-align: middle;
   overflow: hidden;
   position: relative;
-  margin: 20px;
-  display: inline-block;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  float: left;
 
   &:hover {
     box-shadow: 0 0 30px rgba(85,85,85,0.5);
@@ -33,7 +34,11 @@ div.card {
   &.taller {
     @media screen and (max-width: $break--mobile) {
       div.caption {
-        top: 72px;
+        top: 72px !important;
+      }
+
+      div.text {
+          top: 146px !important;
       }
     }
 
@@ -44,6 +49,10 @@ div.card {
         top: 181px !important;
       }
 
+      div.text {
+          top: 285px !important;
+      }
+
       img.card-bg {
         max-width: 100%;
         min-width: 100%;
@@ -52,13 +61,18 @@ div.card {
   }
 
   img.card-bg {
-    height: 100%;
     min-width: 100%;
     min-height: 100%;
-    max-height: 100%;
     margin: 0 -100%;
     position: relative;
     z-index: 0;
+    @media screen and (max-width: $break--mobile) {
+      max-height: 100%;
+    }
+  }
+
+  &:not(.taller) img.card-bg {
+    max-height: 100%;
   }
 
   div.content {
@@ -73,7 +87,28 @@ div.card {
     background-color: rgba(85,85,85,0.4);
 
     &:hover {
-      background-color: rgba(85,85,85,0.75);
+      background-color: rgba(85,85,85,0.8);
+    }
+
+    div.text {
+      position: absolute;
+      @media screen and (max-width: $break--mobile) {
+        width: 84%;
+        margin: 0 8%;
+        top: 210px;
+        font-size: 14px;
+        line-height: 20px;
+      }
+      @media screen and (min-width: $break--mobile + 1) {
+        width: 60%;
+        margin: 0 20%;
+        top: 225px;
+        font-size: 16px;
+        line-height: 26px;
+      }
+      p {
+        margin: 0;
+      }
     }
 
     div.caption {
