--- a/src/components/card/container/container.hbs
+++ b/src/components/card/container/container.hbs
@@ -1,5 +1,5 @@
 <div class="card-container">
   {{#each cards}}
-    {{render '@base--full' data}}
+    {{render '@base' data}}
   {{/each}}
 </div>
