Fix image positioning

--- a/src/components/card/base/base.hbs
+++ b/src/components/card/base/base.hbs
@@ -1,5 +1,5 @@
 <div class="card {{modifier}}">
-  <img src="{{bg-image}}" class="card-bg"/>
+  <img src="{{bg-image}}" class="card-bg {{bg-alignment}}"/>
   <div class="content">
     <div class="caption">
       <h3>{{sub-caption}}</h3>
