--- a/src/components/card/base/base.scss
+++ b/src/components/card/base/base.scss
@@ -29,13 +29,28 @@ div.card {
   img.card-bg {
     min-width: 100%;
     min-height: 100%;
-    margin: 0 -100%;
     position: relative;
     z-index: 0;
   }
 
   &:not(.taller) img.card-bg {
-    max-height: 100%;
+    &.h-center {
+      max-height: 100%;
+      margin: 0 -100%;
+    }
+    &.v-center {
+      max-height: 360px;
+      margin: -70% 0;
+      position: relative;
+      top: 42.75%;
+    }
+    &.left {
+      max-height: 100%
+    }
+  }
+
+  &.taller img.card-bg{
+    margin: 0 -100%;
   }
 
   div.content {
@@ -102,7 +117,7 @@ div.card {
     }
   }
 
-  img.card-bg {
+  img.card-bg.h-center {
     max-height: 100%;
   }
 
@@ -140,9 +155,14 @@ div.card {
           top: 285px !important;
       }
 
-      img.card-bg {
+      img.card-bg.h-center {
         max-width: 100%;
         min-width: 100%;
+      }
+
+      img.card-bg.v-center {
+        max-height: 100%;
+        min-height: 100%;
       }
     }
 
