Lazy image loading

--- a/src/components/_preview.hbs
+++ b/src/components/_preview.hbs
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" href="{{ path '/css/card/base/base.css' }}">
     <link rel="stylesheet" type="text/css" href="{{ path '/css/card/container/container.css' }}">
     <title>Preview Layout</title>
+    <script type="text/javascript" src="/static/js/card.js"></script>
+    <script type="text/javascript" src="/static/js/lazy_loader.js"></script>
 </head>
 <body>
     <div class="container">
