--- a/src/components/card/base/base.hbs
+++ b/src/components/card/base/base.hbs
@@ -1,5 +1,5 @@
 <div class="card {{modifier}}">
-  <img src="{{bg-image}}" class="card-bg {{bg-alignment}}"/>
+  <img data-src="{{bg-image}}" class="card-bg {{bg-alignment}}"/>
   <div class="content">
     <div class="caption">
       <h3>{{sub-caption}}</h3>
@@ -7,7 +7,7 @@
         <h2>{{caption}}</h2>
       {{/if}}
       {{#if logo}}
-        <img src="{{logo}}" class="logo"/>
+        <img data-src="{{logo}}" class="logo"/>
       {{/if}}
     </div>
     {{#if text}}
