--- a/src/components/card/base/base.hbs
+++ b/src/components/card/base/base.hbs
@@ -15,5 +15,8 @@
         <p>{{text}}</p>
       </div>
     {{/if}}
+    {{#if button}}
+      {{render '@button' button}}
+    {{/if}}
   </div>
 </div>
