--- a/src/components/_preview.hbs
+++ b/src/components/_preview.hbs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="{{ path '/css/card/base/base.css' }}">
+    <link rel="stylesheet" type="text/css" href="{{ path '/css/card/button/button.css' }}">
     <link rel="stylesheet" type="text/css" href="{{ path '/css/card/container/container.css' }}">
     <title>Preview Layout</title>
     <script type="text/javascript" src="/static/js/card.js"></script>
